# chibiauth

./: .gitsigners  Cargo.toml  README.md  schema.sql
.cargo/: audit.toml
.github/workflows/: audit.yml
doc/: DESIGN.adoc  OIDC.adoc  TESTING.adoc
example/: config.toml
src/: auth.rs  config.rs  database.rs  main.rs  server.rs  state.rs
src/auth/: api.rs  oidc.rs
src/auth/oidc/: hs256.rs  rs256.rs
src/controller/: mod.rs
src/engine/: jwk.rs  mod.rs
src/model/: user.rs
