[package]
name = "chibiauth"
description = "Naive OpenID provider server"
version = "0.0.1"
authors = ["Aydin Mercan <aydin@mercan.dev>"]
license = "EUPL-1.2"
readme = "README.md"
keywords = ["sso", "oidc", "oauth", "oauth2"]
edition = "2021"
rust-version = "1.62"

[dependencies]
anyhow = "1.0.58"
argon2 = "0.4.1"
axum = { version = "0.5.10", features = ["http2"] }
blake2 = "0.10.4"
clap = { version = "3.2.8", features = ["derive"] }
rand = "0.8.5"
rusqlite = { version = "0.27.0", features = ["serde_json", "time", "uuid"] }
serde = { version = "1.0.137", features = ["derive"] }
time = { version = "0.3.11", features = ["serde"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "fs", "io-util", "io-std", "macros", "net", "process", "signal", "sync", "time"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"
strip = "debuginfo"

[profile.smaller]
inherits = "release"
opt-level = "s"

[features]
bundled = ["rusqlite/bundled"]
