[package]
name = "chibiauth"
description = "Naive OpenID provider server"
version = "0.0.0"
authors = ["Aydin Mercan <aydin@mercan.dev>"]
license = "EUPL-1.2"
readme = "README.md"
keywords = ["sso", "oidc", "oauth", "oauth2"]
edition = "2021"
rust-version = "1.65"
exclude = ["doc/", "example/"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
axum = { version = "0.6.1", features = ["http2"] }
axum-extra = { version = "0.4.2", features = ["cookie"] }
base16ct = "0.1.1"
base64ct = "1.5.3"
blake2 = "0.10.5"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.0.29", features = ["derive"] }
password-hash = "0.4.2"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rsa = "0.7.2"
rusqlite = { version = "0.28.0", features = ["serde_json", "time", "uuid"] }
rustls = "0.20.7"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sha2 = { version = "0.10.6", features = ["oid"] }
subtle = "2.4.1"    
tokio = { version = "1.22.0", features = ["rt-multi-thread", "fs", "io-util", "io-std", "macros", "net", "signal", "sync", "time"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4"] }
zeroize = { version = "1.5.7", features = ["std", "derive"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"
strip = "debuginfo"

[profile.smaller]
inherits = "release"
opt-level = "s"

[features]
bundled = ["rusqlite/bundled"]
